# wasm-bencher

./: .gitignore  .rustfmt.toml  Cargo.toml  rust-toolchain.toml
.github/workflows/: ci.yml  push.yml
bencher/: Cargo.toml
bencher/bencher-procedural/: Cargo.toml
bencher/bencher-procedural/src/: lib.rs
bencher/src/: bench_ext.rs  bench_runner.rs  colorize.rs  handler.rs  lib.rs  macros.rs  tracker.rs
bencher/src/build_wasm/: mod.rs  prerequisites.rs  wasm_project.rs
bencher/test/: Cargo.toml
bencher/test/benches/: foo.rs
bencher/test/src/: benches.rs  lib.rs  mock.rs  tests.rs
weight-gen/: Cargo.toml
weight-gen/src/: main.rs
weight-meter/: Cargo.toml  README.md
weight-meter/src/: lib.rs  meter_std.rs  mock.rs  tests.rs
weight-meter/weight-meter-procedural/: Cargo.toml
weight-meter/weight-meter-procedural/src/: lib.rs
