[workspace]
members = [
	"bencher",
	"bencher/bencher-procedural",
	"bencher/test",
	"weight-gen",
	"weight-meter",
	"weight-meter/weight-meter-procedural",
]

exclude = ["bencher/test"]

resolver = "2"

[profile.dev]
split-debuginfo = "unpacked"

[workspace.dependencies]
frame-support = { version = "40.1.0", default-features = false }
frame-system = { version = "40.1.0", default-features = false }
pallet-balances = { version = "41.1.0", default-features = false }
sc-client-db = { version = "0.46.0", default-features = false }
sc-executor = { version = "0.42.0", default-features = false }
sc-executor-common = { version = "0.38.0", default-features = false }
sp-core = { version = "36.1.0", default-features = false }
sp-externalities = { version = "0.30.0", default-features = false }
sp-io = { version = "40.0.0", default-features = false }
sp-maybe-compressed-blob = { version = "11.0.0", default-features = false }
sp-runtime = { version = "41.1.0", default-features = false }
sp-runtime-interface = { version = "29.0.1", default-features = false }
sp-state-machine = { version = "0.45.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
