[package]
name = "wasm-bencher"
description = "Provide macro to benchmark pallets."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/bencher"
license = "Apache-2.0"
version = "0.5.0"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2021"

[dependencies]
paste = "1.0.7"
build-helper = { version = "0.1.1", optional = true }
cargo_metadata = { version = "0.15.4", optional = true }
tempfile = { version = "3.5.0", optional = true }
toml = { version = "0.7.4", optional = true }
walkdir = { version = "2.3.3", optional = true }
ansi_term = { version = "0.12.1", optional = true }
wasm-gc-api = { version = "0.1.11", optional = true }
rand = {version = "0.8.5", optional = true }
linregress = { version = "0.5.1", optional = true }
parking_lot = { version = "0.12.1", optional = true }
thiserror = { version = "1.0", optional = true }
serde = { version = "^1.0", optional = true, features = ['derive'] }
serde_json = {version = "^1.0", optional = true }
hash-db = { version = "^0.16.0", default-features = false, optional = true }
wasm-bencher-procedural = { path = "bencher-procedural", version = "*", default-features = false }
codec = { package = "parity-scale-codec", version = "^3.0.0", features = ["derive"], default-features = false }

sp-core = {version = "20.0.0", default-features = false }
sp-std = { version = "7.0.0", default-features = false }
sp-io = { version = "22.0.0", default-features = false }
sp-runtime-interface = { version = "16.0.0", default-features = false }
sp-state-machine = { version = "0.27.0", default-features = false, optional = true }
sc-executor = { version = "0.25.0", default-features = false, optional = true }
sc-executor-common = { version = "0.22.0", default-features = false, optional = true }
sc-client-db = { version = "0.28.0", default-features = false, features = ["rocksdb"], optional = true }
sp-maybe-compressed-blob = { version = "5.0.0", default-features = false, optional = true }
frame-support = { version = "21.0.0", default-features = false }
sp-externalities = { version = "0.18.0", default-features = false }
sp-storage = { version = "12.0.0", default-features = false, optional = true }

[features]
default = ["std"]
std = [
    "wasm-bencher-procedural/std",
    "build-helper",
    "cargo_metadata",
    "tempfile",
    "toml",
    "walkdir",
    "ansi_term",
    "wasm-gc-api",
    "rand",
    "linregress",
    "parking_lot",
    "thiserror",
    "serde/std",
    "serde_json/std",
    "hash-db/std",
    "codec/std",
    "sp-core/std",
    "sp-std/std",
    "sp-io/std",
    "sp-runtime-interface/std",
    "sp-state-machine/std",
    "sc-executor/std",
    "sc-executor-common",
    "sc-client-db",
    "sp-maybe-compressed-blob",
    "frame-support/std",
    "sp-externalities/std",
    "sp-storage/std",
]
wasm-bench = [
    "sp-io/disable_panic_handler",
]
