[package]
name = "wasm-bencher"
description = "Provide macro to benchmark pallets."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/bencher"
license = "Apache-2.0"
version = "0.5.0"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2021"

[dependencies]
paste = "^1.0"
build-helper = { version = "^0.1", optional = true }
cargo_metadata = { version = "^0.17", optional = true }
strum = { version = "^0.25", features = ["derive"], optional = true }
filetime = { version = "^0.2", optional = true }
wasm-opt = { version = "0.116.0", optional = true }
parity-wasm = { version = "0.45", optional = true }
tempfile = { version = "^3.5", optional = true }
toml = { version = "^0.7", optional = true }
walkdir = { version = "^2.3", optional = true }
ansi_term = { version = "^0.12", optional = true }
wasm-gc-api = { version = "^0.1", optional = true }
rand = {version = "^0.8", optional = true }
linregress = { version = "^0.5", optional = true }
parking_lot = { version = "^0.12", optional = true }
thiserror = { version = "^1.0", optional = true }
serde = { version = "^1.0", optional = true, features = ['derive'] }
serde_json = {version = "^1.0", optional = true }
wasm-bencher-procedural = { path = "bencher-procedural", version = "*", default-features = false }
codec = { package = "parity-scale-codec", version = "^3.0", features = ["derive"], default-features = false }

sp-core = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime-interface = { workspace = true, default-features = false }
sp-state-machine = { workspace = true, default-features = false, optional = true }
sc-executor = { workspace = true, default-features = false, optional = true }
sc-executor-common = { workspace = true, default-features = false, optional = true }
sc-client-db = { workspace = true, default-features = false, features = ["rocksdb"], optional = true }
sp-maybe-compressed-blob = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
sp-externalities = { workspace = true, default-features = false }
sp-storage = { workspace = true, default-features = false, optional = true }

[features]
default = ["std"]
std = [
    "wasm-bencher-procedural/std",
    "build-helper",
    "cargo_metadata",
    "strum",
    "filetime",
    "wasm-opt",
    "parity-wasm",
    "tempfile",
    "toml",
    "walkdir",
    "ansi_term",
    "wasm-gc-api",
    "rand",
    "linregress",
    "parking_lot",
    "thiserror",
    "serde/std",
    "serde_json/std",
    "codec/std",
    "sp-core/std",
    "sp-std/std",
    "sp-io/std",
    "sp-runtime-interface/std",
    "sp-state-machine/std",
    "sc-executor/std",
    "sc-executor-common",
    "sc-client-db",
    "sp-maybe-compressed-blob",
    "frame-support/std",
    "sp-externalities/std",
    "sp-storage/std",
]
wasm-bench = [
    "sp-io/disable_panic_handler",
]
