[package]
name = "weight-meter"
version = "0.5.0"
license = "Apache-2.0"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
weight-meter-procedural = { path = "weight-meter-procedural", version = "*", default-features = false }

[dev-dependencies]
serde = "^1.0"
scale-info = { version = "^2.7.0", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "^3.0.0" }
sp-runtime = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }

wasm-bencher = { path = "../bencher", version = "*" }

[features]
default = ["std"]
std = [
	"sp-io/std",
	"sp-std/std",
	"weight-meter-procedural/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
]
wasm-bench = [
	"weight-meter-procedural/wasm-bench",
]
