[package]
name = "wasm-bencher-procedural"
version = "0.5.0"
license = "Apache-2.0"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1.0"
quote = "^1.0"
syn = { version = "^2.0", features = ["full"] }

[features]
default = ["std"]
std = []
